fix slider on iphone and word wrap issue

--- a/src/components/styles/app.less
+++ b/src/components/styles/app.less
@@ -16,6 +16,7 @@ body {
   background: -o-linear-gradient(@stuff_war_blue_black, @stuff_war_black); 
   background: linear-gradient(@stuff_war_blue_black, @stuff_war_black); 
   overflow: auto;
+  word-wrap: break-word;
 }
 
 .navbar {
